<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtA"
        style="@style/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtA"
        app:layout_constraintBottom_toTopOf="@+id/txt1"
        app:layout_constraintEnd_toStartOf="@+id/txtB"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtB"
        style="@style/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtB"
        app:layout_constraintEnd_toStartOf="@+id/txtC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtA"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtC"
        style="@style/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtC"

        app:layout_constraintEnd_toStartOf="@+id/txtD"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtB"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtD"
        style="@style/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtD"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtC"
        app:layout_constraintEnd_toStartOf="@+id/txtE"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtC" />

    <TextView
        android:id="@+id/txtE"
        style="@style/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtE"

        app:layout_constraintBaseline_toBaselineOf="@+id/txtD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtD" />

    <TextView
        android:id="@+id/txt1"
        style="@style/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/txt1"
        app:layout_constraintBottom_toTopOf="@+id/txt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtA" />

    <TextView
        android:id="@+id/txt2"
        style="@style/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt2"
        app:layout_constraintBottom_toTopOf="@+id/txt3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <TextView
        android:id="@+id/txt3"
        style="@style/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt3"
        app:layout_constraintBottom_toTopOf="@+id/txt4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2" />

    <TextView
        android:id="@+id/txt4"
        style="@style/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt4"

        app:layout_constraintBottom_toTopOf="@+id/txt5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt3" />

    <TextView
        android:id="@+id/txt5"
        style="@style/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt4" />


</android.support.constraint.ConstraintLayout>